apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:10.10.7
        ports:
        - containerPort: 8096
        securityContext:
          privileged: true
        volumeMounts:
        - name: media
          mountPath: /data/media
        - name: config
          mountPath: /config
        - name: dri
          mountPath: /dev/dri
      volumes:
      - name: media
        hostPath:
          path: /mnt/data/media
          type: Directory
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: config
        hostPath:
          path: /mnt/data/configs/jellyfin
          type: DirectoryOrCreate
